# CASE-Mapping-Python

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  case.json  example.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
case_builder/: __init__.py  base.py  directory.py
case_builder/uco/: action.py  core.py  identity.py  location.py  observable.py  role.py  tool.py
case_mapping/: __init__.py  base.py
case_mapping/case/: __init__.py  investigation.py
case_mapping/uco/: __init__.py  action.py  identity.py  location.py  observable.py  tool.py  types.py
tests/: test_version.py
